Fix image not showing up after user edits image url of a picture

--- a/app/assets/stylesheets/styles/edit_track_lyrics.scss
+++ b/app/assets/stylesheets/styles/edit_track_lyrics.scss
@@ -9,8 +9,7 @@
   width: 400px;
   border: none;
   font-size: 15px;
-  max-height: 1000px;
-  overflow: auto;
+  min-height: 300px;
 }
 
 .track-info-submit-cancel {
